# DarkWave-TaskManager

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Containerfile  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.streamlit/: config.toml
app/: __init__.py  llm_service.py  main.py  mode.py  task_formatter.py  todoist_client.py  todoist_links.py
config/: __init__.py  settings.py
tests/: __init__.py  test_config.py  test_llm_service.py  test_mode.py  test_task_formatter.py  test_todoist_client.py  test_todoist_links.py
tests/ui/: __init__.py  conftest.py  test_mode_switching.py
